creates Game, no guess

--- a/views/home/game.pug
+++ b/views/home/game.pug
@@ -3,9 +3,10 @@ block content
   h1 Hang Man
   input#name(type='text')
   button#new New Game
-  button#flip Flip
   #person
   #id
   #wordLetters
+  input#guessLetter(type='text')
+  button#makeGuess Submit
   #displayWord
   #lettersUsed
